[tool.poetry]
name = "fireguard-database"
version = "0.1.0"
description = ""
authors = ["h587916 <haakon.mydland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-firestore = "^2.16.0"
google-auth = "^2.29.0"
python-decouple = "^3.8"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
